--- a/app/assets/javascripts/templates/challenges.hbs
+++ b/app/assets/javascripts/templates/challenges.hbs
@@ -1,7 +1,6 @@
+{{resource-header title="Challenges" link="challenges.create"}}
 <div class="row">
   <div class="col-md-3">
-    {{#link-to "challenges.create" class="btn btn-info btn-block"}}New Challenge{{/link-to}}
-    <hr>
     <div class="panel panel-info">
       <div class="panel-heading">
         {{#link-to 'challenges'}}<h3 class="panel-title">Active Challenges</h3>{{/link-to}}
