--- a/app/assets/javascripts/templates/competitions.hbs
+++ b/app/assets/javascripts/templates/competitions.hbs
@@ -1,16 +1,4 @@
-<div class="row">
-  <div class="col-sm-10">
-    <h1>Competitions</h1>
-  </div>
-
-  <div class="col-sm-2">
-    {{#link-to "competitions.create" class="btn btn-success pull-right"}}
-      <i class="fa fa-plus fa-2x"></i><br>
-      New Competition
-    {{/link-to}}
-  </div>
-</div>
-<hr>
+{{resource-header title="Competitions" link="competitions.create"}}
 <div class="row">
   <div class="col-md-3">
     <div class="panel panel-info">
