more css tweaks

--- a/app/assets/javascripts/templates/activities/index.hbs
+++ b/app/assets/javascripts/templates/activities/index.hbs
@@ -1,1 +1,18 @@
-<h4 class="text-info">Select an activity from the left</h4>
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <h3 class="panel-title">Activities</h3>
+  </div>
+  <div class="panel-body">
+    <div class="row">
+      <div class="col-sm-6">
+        <h2 class="featurette-heading">Don't see an exercise you want?</h2>
+        <p class="lead">Request new exercises! After they have been approved by an admin, you will be able to start logging new exercises.</p>
+        <p class="lead text-success">Existing exercise details are on the far left, and exercises that are waiting for approval are to the left.</p>
+      </div>
+
+      <div class="col-sm-6">
+        <img src="/assets/exercise.jpg" alt="competitions" class="img-rounded img-responsive">
+      </div>
+    </div>
+  </div>
+</div>
