--- a/app/assets/javascripts/templates/exercises.hbs
+++ b/app/assets/javascripts/templates/exercises.hbs
@@ -1,7 +1,6 @@
+{{resource-header title="Exercises" link="exercises.create"}}
 <div class="row">
   <div class="col-md-6">
-    {{#link-to "exercises.create" class="btn btn-info btn-block"}}Request New Exercise{{/link-to}}
-    <hr>
     <div class="row">
       <div class="col-md-6">
         <div class="panel panel-info">
