--- a/app/assets/javascripts/templates/activities/index.hbs
+++ b/app/assets/javascripts/templates/activities/index.hbs
@@ -5,9 +5,9 @@
   <div class="panel-body">
     <div class="row">
       <div class="col-sm-6">
-        <h2 class="featurette-heading">Don't see an exercise you want?</h2>
-        <p class="lead">Request new exercises! After they have been approved by an admin, you will be able to start logging new exercises.</p>
-        <p class="lead text-success">Existing exercise details are on the far left, and exercises that are waiting for approval are to the left.</p>
+        <h2 class="featurette-heading">Look at your workout history here</h2>
+        <p class="lead">Select an activity to the left to see specific information</p>
+        <p class="lead text-success">Or look at the calendar below</p>
       </div>
 
       <div class="col-sm-6">
