--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,5 +12,7 @@
  *= require datepicker
  *= require custom
  *= require font-awesome
+ *= require ember-calendar
+ *= require style
  *= require_tree .
  */
