--- a/app/assets/javascripts/templates/activities.hbs
+++ b/app/assets/javascripts/templates/activities.hbs
@@ -31,4 +31,4 @@
   </div>
 </div>
 
-{{view Ember.Calendar.CalendarView controllerBinding='controllers.calendar'}}
+{{!-- {{view Ember.Calendar.CalendarView controllerBinding='controllers.calendar'}} --}}
