--- a/app/assets/javascripts/templates/profile.hbs
+++ b/app/assets/javascripts/templates/profile.hbs
@@ -5,7 +5,7 @@
         {{#link-to 'profile' currentUser}}<h3 class="panel-title">Profile</h3>{{/link-to}}
       </div>
       <div class="list-group profile-navigation">
-        {{#link-to "activities" class="list-group-item"}}
+        {{#link-to "profile.activities" class="list-group-item"}}
           <span class="badge"><span class="glyphicon glyphicon-pencil"></span></span>
           Activities
         {{/link-to}}
