--- a/app/assets/javascripts/templates/profile.hbs
+++ b/app/assets/javascripts/templates/profile.hbs
@@ -2,7 +2,7 @@
   <div class="col-md-3">
     <div class="panel panel-info">
       <div class="panel-heading">
-        {{#link-to 'profile' currentUser}}<h3 class="panel-title">Profile</h3>{{/link-to}}
+        <h3 class="panel-title">Profile</h3>
       </div>
       <div class="list-group profile-navigation">
         {{#link-to "profile.activities" class="list-group-item"}}
