--- a/app/assets/javascripts/templates/_finished_competition.hbs
+++ b/app/assets/javascripts/templates/_finished_competition.hbs
@@ -21,7 +21,7 @@
   </ul>    
 </div>
 
-<div class="panel panel-info">
+<div class="panel panel-info leaderboard">
   <div class="panel-heading"><h3 class="panel-title">Leaderboard</h3></div>
     <table class="table table-hover">
       <thead>
