add multi exercise to win condition

--- a/app/assets/javascripts/templates/_started_competition.hbs
+++ b/app/assets/javascripts/templates/_started_competition.hbs
@@ -6,6 +6,7 @@
     {{/if}}  
     {{info-item title="Status" value=status}}
     {{info-item title="Creator" value=user.handle}}
+    {{info-item title="Win Condition" value=competitionWinCondition.name}} 
     {{info-item title="Start Date" value=startDate isDate="true"}}
     {{info-item title="End Date" value=endDate isDate="true"}}
     {{info-item title="Max players" value=numOfParticipants}}
