--- a/app/assets/javascripts/templates/profile/activities.hbs
+++ b/app/assets/javascripts/templates/profile/activities.hbs
@@ -1,30 +1,41 @@
-<div class="row">
-  <div class="col-md-4">
-    <div class="panel panel-info">
-      <div class="panel-heading">
-        <h3 class="panel-title">Logged Activities</h3>
-      </div>
-      {{#link-to 'profile.activities.create' class="text-center btn btn-success btn-block"}}
-        <i class="fa fa-plus fa-2x"></i><br>
-        New Activity
-      {{/link-to}}
-      <div id="recent_activity" class="list-group">
-        {{#each controller}}
-          {{#unless this.isDeleted}}
-            {{#link-to "activity" this class="list-group-item"}}
-              {{shortDateTime this.createdAt}} - {{this.exercise.name}}
-            {{/link-to}}
-          {{/unless}}
-        {{else}}
-          <div class="list-group-item">You haven't logged any activities yet! Go log some!</div>
-        {{/each}}
-      </div>
-    </div>
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <h1 class="panel-title pull-left">Activities</h1>
+    {{#link-to 'profile.activities.create' class="pull-right btn btn-success"}}
+      <i class="fa fa-plus">New Activity</i>    
+    {{/link-to}}
+    <div class="clearfix"></div>
   </div>
-
-  <div class="col-md-8">
-    {{outlet}}
+  {{outlet}}
+  <div id="recent_activity">
+    <p class="lead text-center">{{date startDate}} - {{date endDate}}</p>
+    <ul class="pager">
+      <li><a href="#" {{action "prevWeek"}}>Previous</a></li>
+      <li><a href="#" {{action "nextWeek"}}>Next</a></li>
+    </ul>
+    <table class="table table-bordered table-striped">
+      <tr>
+        <th>Sunday</th>
+        <th>Monday</th>
+        <th>Tuesday</th>
+        <th>Wednesday</th>
+        <th>Thursday</th>
+        <th>Friday</th>
+        <th>Saturday</th>
+      </tr>
+      <tr>
+        <td>
+          {{basic-list collection=sundayActivities}}
+        </td>
+        <td>{{basic-list collection=mondayActivities}}</td>
+        <td>{{basic-list collection=tuesdayActivities}}</td>
+        <td>{{basic-list collection=wednesdayActivities}}</td>
+        <td>{{basic-list collection=thursdayActivities}}</td>
+        <td>{{basic-list collection=fridayActivities}}</td>
+        <td>{{basic-list collection=saturdayActivities}}</td>
+      </tr>
+    </table>
   </div>
 </div>
 
-{{!-- {{view Ember.Calendar.CalendarView controllerBinding='controllers.calendar'}} --}}
+
