--- a/app/assets/javascripts/templates/profile/activities/create.hbs
+++ b/app/assets/javascripts/templates/profile/activities/create.hbs
@@ -1,8 +1,5 @@
-<div class="panel panel-info">
-  <div class="panel-heading">
-    <h3 class="panel-title">Log Activity</h3>
-  </div>
-  <div class="panel-body">
+<ul class="list-group">
+  <li class="list-group-item">
     {{#form-for model wrapper="bootstrap"}}
       {{view Ember.Select content=alphabeticalExercises name="Exercise Select" value=model.exercise optionValuePath="content" optionLabelPath='content.name' class="form-control" prompt="Please select an exercise"}}
       {{#if model.exercise}}
@@ -12,8 +9,8 @@
       {{#if isSaving}}
         <a href="#" class="btn" name="Close" disabled>Saving...</a>
       {{else}}
-        {{submit "Log it!" id="logActivity" class="btn btn-primary"}}
+        <p class="text-center">{{submit "Log it!" id="logActivity" class="btn btn-lg btn-primary"}}</p>
       {{/if}}
     {{/form-for}} 
-  </div>
-</div>
+  </li>
+</ul>
