--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -22,6 +22,13 @@ div.loading-gif {
   border: 1px solid #eee;
 }
 
+.activity-fixed-vertical {
+    position: fixed;
+    height: 100%;
+    width: 24%;
+    z-index: 999;
+}
+
 .info-box {
   background-color: #fff;
   border-width: 1px;
@@ -43,7 +50,10 @@ div.loading-gif {
   letter-spacing: 1px;
 }
 
-body { padding-top: 130px; }
+body { 
+background-image:url('dust.png');
+  padding-top: 130px; 
+}
 
 #main-footer {
   height: 20px;
