--- a/app/assets/javascripts/templates/profile.hbs
+++ b/app/assets/javascripts/templates/profile.hbs
@@ -1,35 +1,19 @@
-<div class="row">
-  <div class="col-md-3">
-    <div class="panel panel-info">
-      <div class="panel-heading">
-        <h3 class="panel-title">Profile</h3>
-      </div>
-      <div class="list-group profile-navigation">
-        {{#link-to "profile.activities" class="list-group-item"}}
-          <span class="badge"><span class="glyphicon glyphicon-pencil"></span></span>
-          Activities
-        {{/link-to}}
-        {{#link-to "profile.stats" class="list-group-item"}}
-          <span class="badge"><span class="glyphicon glyphicon-stats"></span></span>
-          Stats
-        {{/link-to}}
-        {{#link-to "profile.competitions" class="list-group-item"}}
-          <span class="badge"><span class="glyphicon glyphicon-star"></span></span>
-          Competitions
-        {{/link-to}}
-        {{#link-to "profile.challenges" class="list-group-item"}}
-          <span class="badge"><span class="glyphicon glyphicon-star-empty"></span></span>
-          Challenges
-        {{/link-to}}
-        {{#link-to "profile.edit" class="list-group-item"}}
-          <span class="badge"><span class="glyphicon glyphicon-cog"></span></span>
-          Settings
-        {{/link-to}}
-      </div>
-    </div>
-  </div>
+<ul class="nav nav-tabs">
+  <li>
+    {{#link-to "profile.activities" class="list-group-item"}}Activities{{/link-to}}
+  </li>
+  <li>
+    {{#link-to "profile.stats" class="list-group-item"}}Stats{{/link-to}}
+  </li>
+  <li>
+    {{#link-to "profile.competitions" class="list-group-item"}}Competitions{{/link-to}}
+  </li>
+  <li>
+    {{#link-to "profile.challenges" class="list-group-item"}}Challenges{{/link-to}}
+  </li>
+  <li>
+    {{#link-to "profile.edit" class="list-group-item"}}Settings{{/link-to}}
+  </li>
+</ul>
 
-  <div class="col-md-9">
-    {{outlet}}
-  </div>
-</div>
+{{outlet}}
