--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -29,6 +29,10 @@ div.loading-gif {
     z-index: 999;
 }
 
+#activity-calendar {
+  font-size: 11px;
+}
+
 .info-box {
   background-color: #fff;
   border-width: 1px;
