changes background and css

--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -46,6 +46,8 @@ div.loading-gif {
   border-width: 1px 0;
 }
 
+
+
 .info-box h3 {
   font-size: 12px;
   font-weight: 700;
@@ -55,7 +57,9 @@ div.loading-gif {
 }
 
 body { 
-background-image:url('dust.png');
+  background-size:100%;
+
+  background-image:url('concrete.jpg');
   padding-top: 130px; 
 }
 
