--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  *= require_self
  *= require datepicker
  *= require custom
+ *= require custom_bootstrap
  *= require font-awesome
  *= require_tree .
  */
