adds assets and arena page

--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -14,7 +14,7 @@
         <li class="text-center">
           {{#link-to "index"}}
             <i class="fa fa-home fa-3x"></i><br>
-            WW
+            Arena
           {{/link-to}}
         </li>
         <li class="text-center">
