--- a/app/assets/stylesheets/custom_bootstrap.css
+++ b/app/assets/stylesheets/custom_bootstrap.css
@@ -6,6 +6,6 @@ div.jumbotron {
   background-color:rgba(10,10,10,0.5);
 }
 
-p { 
-  font-color: #fff !important;
+li div.row {
+  background-color:rgba(10,10,10,0.5);
 }
