--- a/app/assets/javascripts/templates/index.hbs
+++ b/app/assets/javascripts/templates/index.hbs
@@ -1,13 +1,28 @@
 <div class="container">
   <div class="jumbotron">
     <img src="/assets/ww-logo-large.png" class="img-responsive" />    
-    <h1><p class="text-danger text-center">BETA</p></h1>
-    <p>Get ready to take your fitness to the next level.</p>
+    <h1><p class="text-danger text-center">Arena</p></h1>
+    <p class="text-center">Get ready to take your fitness to the next level.</p>
   </div>
 
   <hr class="featurette-divider">
-  <h2>Competition Hotness</h2>
-  {{#each controller}}
-    {{hot-item model=this}}
-  {{/each}}
+  <div class='row'>
+    <div class='col-md-8'>
+      <h2>Competition Hotness</h2>
+      {{#each controller}}
+        {{hot-item model=this}}
+      {{/each}}
+    </div>
+
+    <div class="col-md-4">
+      <h2>Recent Activity</h2>
+      <div class="well well-lg">
+        <ul class="list-group">          
+          <li class="list-group-item"><img src="/assets/guest-sml.png" class="img-rounded" /> Summer logged 20 Pushups</li>
+          <li class="list-group-item"><img src="/assets/guest-sml.png" class="img-rounded" /> Scott logged 15 Pullups</li>
+          <li class="list-group-item"><img src="/assets/guest-sml.png" class="img-rounded" /> Joey logged nothing</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
