--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -18,7 +18,7 @@
           {{/link-to}}
         </li>
         <li class="text-center">
-          {{#link-to "profile.activities.create" currentUser name="New Activity"}}
+          {{#link-to "activities"}}
             <i class="fa fa-bolt fa-3x"></i><br>
             Log Activity
           {{/link-to}}
