updating activities to exercises screens

--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -20,7 +20,7 @@
         <li class="text-center">
           {{#link-to "activities"}}
             <i class="fa fa-bolt fa-3x"></i><br>
-            Log Activity
+            Log Exercise
           {{/link-to}}
         </li>
         <li class="text-center">
