--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -10,7 +10,7 @@
       </button>
     </div>
     <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
+      <ul class="nav nav-justified">
         <li class="text-center">
           {{#link-to "index"}}
             <i class="fa fa-home fa-3x"></i><br>
@@ -53,8 +53,6 @@
             Exercises
           {{/link-to}}
         </li>
-      </ul>
-      <ul class="nav navbar-nav pull-right">
         <li>
           <a href="/users/sign_out" data-method="delete" id='sign_out_button'>
             <i class="fa fa-sign-out fa-3x"></i><br>
