--- a/app/assets/javascripts/templates/_finished_competition.hbs
+++ b/app/assets/javascripts/templates/_finished_competition.hbs
@@ -35,6 +35,15 @@
       <tbody>
       {{#each compJoin in rankedJoins}}
         <tr>
+          <td colspan="3">
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                <span class="sr-only">40% Complete (success)</span>
+              </div>
+            </div>
+          </td>
+        </tr>
+        <tr>
           <td>{{compJoin.user.handle}}</td>
           <td>{{compJoin.rank}}</td>               
           <td><span class="badge">{{compJoin.total}}</span></td>
