--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -33,6 +33,12 @@ div.loading-gif {
   font-size: 11px;
 }
 
+#trophy_pic.img-responsive {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
 .info-box {
   background-color: #fff;
   border-width: 1px;
