fix users page yo

--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -29,6 +29,13 @@ div.loading-gif {
     z-index: 999;
 }
 
+.user-fixed-vertical {
+    position: fixed;
+    height: 100%;
+    width: 40%;
+    z-index: 999;
+}
+
 #activity-calendar {
   font-size: 11px;
 }
