--- a/app/assets/javascripts/templates/profile.hbs
+++ b/app/assets/javascripts/templates/profile.hbs
@@ -13,4 +13,30 @@
   </li>
 </ul>
 
-{{outlet}}
+<div class="row">
+  <div class="col-md-6">
+    {{outlet}}
+  </div>
+
+  <div class="col-md-6">
+    <div class="centered">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h3 class="panel-title">Level Progress</h3>
+        </div>
+        <h4>Progress towards next level</h4>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+            <span class="sr-only">60% Complete</span>
+          </div>
+        </div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h3 class="panel-title">Trophies</h3>
+        </div>
+        <img id="trophy_pic" src='/assets/trophy-case.png' class="img-responsive"/>
+      </div> 
+    </div>
+  </div> 
+</div>
