--- a/app/assets/javascripts/templates/users.hbs
+++ b/app/assets/javascripts/templates/users.hbs
@@ -1,23 +1,29 @@
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-4">
     <div class="panel panel-info">
       <div class="panel-heading">
-        {{#link-to 'users'}}<h3 class="panel-title">Users</h3>{{/link-to}}
+        <h3 class="panel-title">Users</h3>
       </div>
       <div class="list-group">
-        {{#each controller}}
-          {{#unless isDirty}}
-            {{#link-to "user" this class="list-group-item"}}{{handle}}{{/link-to}}
-          {{/unless}}
-        {{else}}
-          <a href="#" class="list-group-item">There are no competitions.</a>
+        {{#each user in controller}}          
+          {{#link-to "user" user class="list-group-item"}}
+            <div class="row">
+              <div class="col-sm-3">{{gravatarUrlSmall user}}</div>
+              <div class="col-sm-4">{{user.handle}}</div>          
+              <div class="col-sm-2"><span class="badge">{{user.level}}</span></div>               
+              <div class="col-sm-3"><span class="badge">{{user.experience}}</span></div>
+            </div>
+          {{/link-to}}        
         {{/each}}
       </div>
     </div>
+    <hr class="featurette-divider">
   </div>
 
-  <div class="col-md-9">
-    {{outlet}}
+  <div class="col-md-8">
+    <div class="user-fixed-vertical">
+      {{outlet}}
+    </div>
   </div>
 </div>
 
