--- a/app/assets/javascripts/templates/profile.hbs
+++ b/app/assets/javascripts/templates/profile.hbs
@@ -1,15 +1,15 @@
 <ul class="nav nav-tabs">
   <li>
-    {{#link-to "profile.stats" class="list-group-item"}}Stats{{/link-to}}
+    {{#link-to "profile.stats"}}Stats{{/link-to}}
   </li>
   <li>
-    {{#link-to "profile.competitions" class="list-group-item"}}Competitions{{/link-to}}
+    {{#link-to "profile.competitions"}}Competitions{{/link-to}}
   </li>
   <li>
-    {{#link-to "profile.challenges" class="list-group-item"}}Challenges{{/link-to}}
+    {{#link-to "profile.challenges"}}Challenges{{/link-to}}
   </li>
   <li>
-    {{#link-to "profile.edit" class="list-group-item"}}Settings{{/link-to}}
+    {{#link-to "profile.edit"}}Settings{{/link-to}}
   </li>
 </ul>
 
