--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -53,7 +53,7 @@
             Exercises
           {{/link-to}}
         </li>
-        <li>
+        <li class="text-center">
           <a href="/users/sign_out" data-method="delete" id='sign_out_button'>
             <i class="fa fa-sign-out fa-3x"></i><br>
             Logout
