--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -1,1 +1,5 @@
+<div class="well well-lg">
+  <h2>Competition Description:</h2>
+  <p class="lead">{{description}}</p>
+</div>
 {{partial currentPartial}} 
