--- a/app/assets/javascripts/templates/competitions.hbs
+++ b/app/assets/javascripts/templates/competitions.hbs
@@ -1,42 +1,25 @@
 {{resource-header title="Competitions" link="competitions.create"}}
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-6">
     <div class="panel panel-info">
-      <div class="panel-heading">
-        Status Filter
-      </div>
-      <div class="panel-body">
-        <div class="checkbox">
-          <label>
-            {{input type="checkbox" checked=showUnstarted}} Unstarted
-          </label>
+      <div class="panel-heading">        
+        <div class="row">
+          <div class="col-sm-4"><h3 class="panel-title">Competitions</h3></div>
+          <div class="col-sm-4">Number of Users</div>                      
+          <div class="col-sm-4">Status</div>
         </div>
-        <div class="checkbox">
-          <label>
-            {{input type="checkbox" checked=showStarted}} Started
-          </label>
-        </div>
-        <div class="checkbox">
-          <label>
-            {{input type="checkbox" checked=showFinished}} Finished
-          </label>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-md-3">
-    <div class="panel panel-info">
-      <div class="panel-heading">
-        Competitions
       </div>
       <div class="list-group">
-        {{#each currentCompetitions}}
-          {{#unless this.isNew}}
-            {{#link-to "competition" this class="list-group-item"}}{{name}}{{/link-to}}
-          {{/unless}}
-        {{else}}
-          <a href="#" class="list-group-item">There are currently no competitions of the selected type.</a>
+        {{#each competition in controller}} 
+          {{#unless competition.isNew}}         
+            {{#link-to "competition" competition class="list-group-item"}}
+              <div class="row">
+                <div class="col-sm-4">{{competition.name}}</div>
+                <div class="col-sm-4">{{competition.numberOfUsers}}</div>                      
+                <div class="col-sm-4"><span class="badge">{{competition.status}}</span></div>
+              </div>
+            {{/link-to}}   
+          {{/unless}}     
         {{/each}}
       </div>
     </div>
@@ -46,5 +29,4 @@
     {{outlet}}
   </div>
 </div>
-
 
