--- a/app/assets/stylesheets/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap.css.erb
@@ -45,6 +45,10 @@ a {
   background: transparent;
 }
 
+ul.nav-tabs > li > a {
+  background-color: #033c73;
+}
+
 a:focus {
   outline: thin dotted;
 }
@@ -5912,7 +5916,6 @@ a.list-group-item.active:focus .list-group-item-text {
 
 .panel {
   margin-bottom: 20px;
-  background-color: #ffffff;
   border: 1px solid transparent;
   border-radius: 4px;
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
@@ -6212,6 +6215,7 @@ a.list-group-item.active:focus .list-group-item-text {
 
 .panel-info {
   border-color: #dddddd;
+  background-color:rgba(10,10,10,0.5);
 }
 
 .panel-info > .panel-heading {
