--- a/app/assets/stylesheets/custom_bootstrap.css
+++ b/app/assets/stylesheets/custom_bootstrap.css
@@ -1,11 +1,36 @@
-div.panel {
-  background-color:rgba(10,10,10,0.5);
-}
-
 div.jumbotron {
   background-color:rgba(10,10,10,0.5);
 }
 
-li div.row {
+ul.list-group-item {
   background-color:rgba(10,10,10,0.5);
+}
+
+li.list-group-item {
+  background-color:rgba(10,10,10,0.5);
+}
+
+li.text-center > a {
+  color: #fff !important;
+}
+
+a.list-group-item {
+  color: #fff !important;
+  background-color:rgba(10,10,10,0.5);
+}
+
+div.panel {
+  background-color:rgba(10,10,10,0.5);
+}
+
+div.well-lg  {
+  background-color:rgba(10,10,10,0.5) !important;
+}
+ 
+.well > p.lead {
+  color: #111;
+}
+
+* {
+  color: #fff;
 }
