--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -13,26 +13,8 @@
       <ul class="nav nav-justified">
         <li class="text-center">
           {{#link-to "index"}}
-            <i class="fa fa-home fa-3x"></i><br>
-            Arena
-          {{/link-to}}
-        </li>
-        <li class="text-center">
-          {{#link-to "activities"}}
-            <i class="fa fa-bolt fa-3x"></i><br>
-            Log Exercise
-          {{/link-to}}
-        </li>
-        <li class="text-center">
-          {{#link-to "profile" currentUser name="My Profile"}}
             <i class="fa fa-dashboard fa-3x"></i><br>
-            Profile
-          {{/link-to}}
-        </li>
-        <li class="text-center">
-          {{#link-to "users"}}
-            <i class="fa fa-group fa-3x"></i><br>
-            Users            
+            Dashboard
           {{/link-to}}
         </li>
         <li class="text-center">
@@ -42,15 +24,15 @@
           {{/link-to}}
         </li> 
         <li class="text-center">
-          {{#link-to "challenges"}}
-            <i class="fa fa-flag fa-3x"></i><br>
-            Challenges
+          {{#link-to "profile" currentUser name="My Profile"}}
+            <i class="fa fa-user fa-3x"></i><br>
+            Profile
           {{/link-to}}
-        </li>   
+        </li>
         <li class="text-center">
-          {{#link-to "exercises"}}
-            <i class="fa fa-asterisk fa-3x"></i><br>
-            Exercises
+          {{#link-to "users"}}
+            <i class="fa fa-group fa-3x"></i><br>
+            Users            
           {{/link-to}}
         </li>
         <li class="text-center">
