--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -72,8 +72,8 @@ div.loading-gif {
 body { 
   background-size:100%;
 
-  background-image:url('concrete.jpg');
-  padding-top: 130px; 
+  background-image:url('background.png');
+  padding-top: 80px; 
 }
 
 #main-footer {
