--- a/app/assets/stylesheets/custom_bootstrap.css
+++ b/app/assets/stylesheets/custom_bootstrap.css
@@ -1,4 +1,4 @@
-div.jumbotron {
+/*div.jumbotron {
   background-color:rgba(10,10,10,0.5);
 }
 
@@ -33,4 +33,4 @@ div.well-lg  {
 
 * {
   color: #fff;
-}
+}*/
