--- a/app/assets/javascripts/templates/activities.hbs
+++ b/app/assets/javascripts/templates/activities.hbs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6">
-    <div class="panel panel-info challenges-panel">
+    <div class="panel panel-info">
       <div class="panel-heading">
         <h3 class="panel-title">New Exercise</h3>
       </div>    
