--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -1,3 +1,14 @@
+/* Global Styles */
+body, html, .container-fluid {
+  height:100%;
+}
+
+body { 
+  background-size:100%;
+  background-image:url('background.png');
+  padding-top: 90px; 
+}
+
 div.loading-gif {
   margin: 0 auto;
   background-image: url('<%= asset_path "loader.gif" %>');
@@ -12,14 +23,69 @@ div.loading-gif {
   src: url('<%= asset_path "glyphicons-halflings-regular.eot?#iefix" %>') format('embedded-opentype'), url('<%= asset_path "glyphicons-halflings-regular.woff" %>') format('woff'), url('<%= asset_path "glyphicons-halflings-regular.ttf" %>') format('truetype'), url('<%= asset_path "glyphicons-halflings-regular.svg#glyphicons_halflingsregular" %>') format('svg');
 }
 
-#main-footer {
-  margin-top: 13px;
-}
-
 .terms {
   height: 100px;
   overflow-y: scroll;
   border: 1px solid #eee;
+}
+
+.side-arrow {
+  position: absolute;  
+  width: 100px; 
+  height: 100px;  
+  top: 10px;  
+  left: 30px; 
+  background-color: #00c;
+}
+
+
+/* Utility Styles */
+
+.row.table-row > [class*="col-"].custom {
+  background-color: #333;
+  text-align: center;
+}
+.row.table-row {display:table;width:100%;margin:0 auto;}
+
+.row.table-row > [class*="col-"] {
+  float:none;
+  float:none;
+  display:table-cell;
+  vertical-align:top;
+}
+
+.row.table-row > .col-sm-11 {
+  width: 91.66666666666666%;
+}
+.row.table-row > .col-sm-10 {
+  width: 83.33333333333334%;
+}
+.row.table-row > .col-sm-9 {
+  width: 75%;
+}
+.row.table-row > .col-sm-8 {
+  width: 66.66666666666666%;
+}
+.row.table-row > .col-sm-7 {
+  width: 58.333333333333336%;
+}
+.row.table-row > .col-sm-6 {
+  width: 50%;
+}
+.col-sm-5 {
+  width: 41.66666666666667%;
+}
+.col-sm-4 {
+  width: 33.33333333333333%;
+}
+.row.table-row > .col-sm-3 {
+  width: 25%;
+}
+.row.table-row > .col-sm-2 {
+  width: 16.666666666666664%;
+}
+.row.table-row > .col-sm-1 {
+  width: 8.333333333333332%;
 }
 
 .activity-fixed-vertical {
@@ -45,38 +111,14 @@ div.loading-gif {
   margin-right: auto;
 }
 
-
-.info-box {
-  background-color: #fff;
-  border-width: 1px;
-  border-color: #ddd;
-  border-radius: 4px 4px 0 0;
-  box-shadow: none;
-  background-color: #fafafa;
-  box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
-  border-color: #e5e5e5 #eee #eee;
-  border-style: solid;
-  border-width: 1px 0;
+#exercise-panel {
+  background-color: #282828;
 }
 
-
-
-.info-box h3 {
-  font-size: 12px;
-  font-weight: 700;
-  color: #bbb;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
-
-body { 
-  background-size:100%;
-
-  background-image:url('background.png');
-  padding-top: 80px; 
-}
+/* Footer Styles */
 
 #main-footer {
   height: 20px;
   background: #DDDDDD;
+  margin-top: 13px;
 }
